handle form request

--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookshelf App</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/addBook.js"></script>
 </head>
 <body>
     <div>
-        <form action="/" id="form" method="GET">
+        <form action="/books" id="form" method="POST">
             <div id="errors"></div>
             <label for="name">Name:</label>
             <input type="text" id="name">
