--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,8 @@
     <div>
         <form action="/books" id="form" method="POST">
             <div id="errors"></div>
-            <label for="name">Name:</label>
-            <input type="text" id="name">
+            <label for="title">Name:</label>
+            <input type="text" id="title">
             <label for="author">Author:</label>
             <input type="text" id="author">
             <input type="submit" value="Submit">
