--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <div>
         <form action="/books" id="form" method="POST">
             <div id="errors"></div>
-            <label for="title">Name:</label>
+            <label for="title">Title:</label>
             <input type="text" id="title">
             <label for="author">Author:</label>
             <input type="text" id="author">
