--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,9 @@
         <form action="/books" id="form" method="POST">
             <div id="errors"></div>
             <label for="title">Title:</label>
-            <input type="text" id="title">
+            <input type="text" id="title" name="title">
             <label for="author">Author:</label>
-            <input type="text" id="author">
+            <input type="text" id="author" name="title">
             <input type="submit" value="Submit">
         </form>
     </div>
