--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
             <label for="title">Title:</label>
             <input type="text" id="title" name="title">
             <label for="author">Author:</label>
-            <input type="text" id="author" name="title">
+            <input type="text" id="author" name="author">
             <input type="submit" value="Submit">
         </form>
     </div>
