--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,35 @@
 body {
-    background-color: red;
+  background-color: #ebe9e4;
+}
+
+form {
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.box-form {
+  padding: 30px;
+  display: flex;
+}
+
+.text {
+  width: 200px;
+  height: 30px;
+}
+
+label {
+  padding-right: 10px;
+}
+
+.button {
+  width: 140px;
+  height: 40px;
+  background: #4abf2a;
+}
+
+input {
+  border-radius: 5px;
 }
