--- a/views/index.html
+++ b/views/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf App</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div>
-        <form action="/books" id="form" method="POST">
-            <div id="errors"></div>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title">
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author">
-            <input type="submit" value="Submit">
-        </form>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div id="form-container">
+      <form action="/books" id="form" method="POST">
+        <div id="errors"></div>
+        <div class="box-form">
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" class="text" />
+        </div>
+        <div class="box-form">
+          <label for="author">Author:</label>
+          <input type="text" id="author" name="author" class="text" />
+        </div>
+        <div class="box-form">
+          <input type="submit" value="Submit" class="button" />
+        </div>
+      </form>
     </div>
 
     <ul>
-        <% books.forEach(book => { %>
-        <li>
-            <%= book.title%>
-        </li>
-        <% }) %>
+      <% books.forEach(book => { %>
+      <li><%= book.title%></li>
+      <% }) %>
     </ul>
-</body>
+  </body>
 </html>
