--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 body {
   background-color: #ebe9e4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 form {
@@ -13,6 +17,8 @@ form {
 .box-form {
   padding: 30px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .text {
@@ -25,11 +31,35 @@ label {
 }
 
 .button {
-  width: 140px;
+  width: 120px;
   height: 40px;
   background: #4abf2a;
 }
 
 input {
   border-radius: 5px;
+}
+
+#list-container {
+  margin-top: 80px;
+  display: flex;
+  width: 500px;
+}
+
+ul {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+li {
+  padding: 10px;
+  width: 100%;
+  display: flex;
+}
+
+li div {
+  width: 60%;
 }
